--- a/precios.html
+++ b/precios.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/invie.css">
 </head>
 <body>
-    <header id="header" class="header background">
+    <header id="header" class="header background toper">
         <div class="contenedor">
             <figure class="logotipo"> <!-- logotipo -->
                 <img src="images/invie.png" alt="Invie Logotipo" width="186" height="60">
